# AIVisualDoppelganger

./: .gitignore  Dockerfile  README.md  genetic_algorithm.py  gunicorn.conf.py  gunicorn_config.py  main.py  pyproject.toml  requirements.txt  tempCodeRunnerFile.py
static/: script.js  styles.css
templates/: index.html
uploads/: desktop.ini
