[tool.poetry]
name = "ai-visual-doppelganger"
version = "1.0.0"
description = "AI Visual Doppelganger: Image replication with AI"
authors = ["Ryoichi Homma <onlytru6340@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
email-validator = "^1.1.2"
pillow = "10.1.0"
gunicorn = "^20.1.0"
numpy = "^1.26.2"
scikit-image = "^0.18.3"
scikit-learn = "^0.24.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
