[tool.poetry]
name = "ai-visual-doppelganger"
version = "1.0.0"
description = "AI Visual Doppelganger: Image replication with AI"
authors = ["Ryoichi Homma <onlytru6340@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
email-validator = "^1.1.2"
pillow = "10.1.0"
gunicorn = "^21.2.0"
numpy = "^1.26.2"
scikit-image = "^0.22.0"
scikit-learn = "^1.4.1.post1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[tool.poetry.scripts]
start = "gunicorn -c gunicorn_config.py main:app"

[tool.poetry.metadata]
keywords = ["AI", "Image Processing"]
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
